versioned_docs/version-2.4/reference/subsystems/mypy.mdx
---
title: mypy
description: |
  The MyPy Python type checker (http://mypy-lang.org/).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The MyPy Python type checker (http://mypy-lang.org/).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[mypy]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--mypy-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr='PANTS_MYPY_ARGS'
  toml_repr={`[mypy]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to mypy, e.g. `--mypy-args="--python-version 3.7 --disallow-any-expr"`

</Option>

### `skip`

<Option
  cli_repr={`--[no-]mypy-skip`}
  env_repr='PANTS_MYPY_SKIP'
  toml_repr={`[mypy]
skip = <bool>`}
  default_repr={`False`}
>

Don&#x27;t use MyPy when running `/home/josh/work/scie-pants/dist/pants lint`.

</Option>

## Advanced options

### `config`

<Option
  cli_repr={`--mypy-config=<file_option>`}
  env_repr='PANTS_MYPY_CONFIG'
  toml_repr={`[mypy]
config = <file_option>`}
  default_repr={`None`}
>

Path to `mypy.ini` or alternative MyPy config file

</Option>

### `console_script`

<Option
  cli_repr={`--mypy-console-script=<str>`}
  env_repr='PANTS_MYPY_CONSOLE_SCRIPT'
  toml_repr={`[mypy]
console_script = <str>`}
  default_repr={`mypy`}
>

The console script for the tool. Using this option is generally preferable to (and mutually exclusive with) specifying an --entry-point since console script names have a higher expectation of staying stable across releases of the tool. Usually, you will not want to change this from the default.

</Option>

### `entry_point`

<Option
  cli_repr={`--mypy-entry-point=<str>`}
  env_repr='PANTS_MYPY_ENTRY_POINT'
  toml_repr={`[mypy]
entry_point = <str>`}
  default_repr={`None`}
>

The entry point for the tool. Generally you only want to use this option if the tool does not offer a --console-script (which this option is mutually exclusive with). Usually, you will not want to change this from the default.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--mypy-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_MYPY_EXTRA_REQUIREMENTS'
  toml_repr={`[mypy]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--mypy-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_MYPY_INTERPRETER_CONSTRAINTS'
  toml_repr={`[mypy]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.6"\n]`}
>

Python interpreter constraints for this tool.

</Option>

### `source_plugins`

<Option
  cli_repr={`--mypy-source-plugins="[<target_option>, <target_option>, ...]"`}
  env_repr='PANTS_MYPY_SOURCE_PLUGINS'
  toml_repr={`[mypy]
source_plugins = [
    <target_option>,
    <target_option>,
    ...,
]`}
  default_repr={`[]`}
>

An optional list of `python_library` target addresses to load first-party plugins.

You must also set `plugins = path.to.module` in your `mypy.ini`, and set the `[mypy].config` option in your `pants.toml`.

To instead load third-party plugins, set the option `[mypy].extra_requirements` and set the `plugins` option in `mypy.ini`.

</Option>

### `version`

<Option
  cli_repr={`--mypy-version=<str>`}
  env_repr='PANTS_MYPY_VERSION'
  toml_repr={`[mypy]
version = <str>`}
  default_repr={`mypy==0.800`}
>

Requirement string for the tool.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
